remove useless files and update .gitignore files

--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,23 @@
-bin/
-obj/
 # for codeblocks
 *.depend
 *.layout
 *.bmarks
+bin/
+obj/
 Debug/
+
+# for eclipse
 .settings/
+.cproject
+.project
+
+# for Makefile
 *.o
 main
 *.po
+
+# for vscode
+.vscode
+
+# for CMake
+build/
